--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>인증하기</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
         body { font-family: Arial, sans-serif; }
         .container { width: 100%; max-width: 500px; margin: 20px auto; text-align: left; }
@@ -29,21 +29,24 @@
     </div>
 
     <script>
-        const excelUrl = "https://raw.githubusercontent.com/사용자명/저장소명/main/winners.xlsx";  // 여기에 실제 GitHub Raw URL 입력
-
+        const googleSheetUrl = "https://docs.google.com/spreadsheets/d/167pvEhhLpY2oOprw931c_w24QEi0EPXGwxXp7PvNqAg/edit?usp=sharing";
         let excelData = [];
 
         async function loadExcel() {
-            const response = await fetch(excelUrl);
-            const arrayBuffer = await response.arrayBuffer();
-            const workbook = XLSX.read(arrayBuffer, { type: "array" });
+            try {
+                const response = await fetch(googleSheetUrl);
+                const text = await response.text();
+                const jsonData = JSON.parse(text.substring(47, text.length - 2));  // Google Sheets JSON 데이터 정리
 
-            // 첫 번째 시트 읽기
-            const sheetName = workbook.SheetNames[0];
-            const sheet = workbook.Sheets[sheetName];
+                excelData = jsonData.table.rows.map(row => ({
+                    접수번호: row.c[0].v.toString(),  // 첫 번째 컬럼 (접수번호)
+                    이름: row.c[1].v                 // 두 번째 컬럼 (이름)
+                }));
 
-            // JSON 형식으로 변환
-            excelData = XLSX.utils.sheet_to_json(sheet);
+                console.log("엑셀 데이터 로드 완료:", excelData);
+            } catch (error) {
+                console.error("엑셀 데이터 로드 실패", error);
+            }
         }
 
         async function verify() {
