--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <script>
-        const googleSheetUrl = "https://docs.google.com/spreadsheets/d/167pvEhhLpY2oOprw931c_w24QEi0EPXGwxXp7PvNqAg/edit?usp=sharing";
+        const googleSheetUrl = "https://docs.google.com/spreadsheets/d/167pvEhhLpY2oOprw931c_w24QEi0EPXGwxXp7PvNqAg/gviz/tq?tqx=out:json";
         let excelData = [];
 
         async function loadExcel() {
