--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
     <div class="container">
-        <h2>인증하기</h2>
+        <h2>인증하기11</h2>
         <div class="input-group">
             <input type="text" id="receiptNumber" placeholder="접수번호 입력">
             <input type="text" id="winnerName" placeholder="당첨자 이름 입력">
